fix wrap

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -101,6 +101,7 @@ body {
 
 .list-item-title {
     .custom-title {
+        flex-wrap: wrap;
         display: flex;
     }
 }
